syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateVaultRequest {
  VaultArgs resource = 1;
}

message ReadVaultRequest {
  string resource_id = 1;
}

message UpdateVaultRequest {
  string resource_id = 1;
  VaultArgs resource = 2;
}

message DeleteVaultRequest {
  string resource_id = 1;
}

message VaultGcpOverride {
  string project = 1;
}

message VaultArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;

  VaultGcpOverride gcp_override = 3;
}

message VaultAzureOutputs {
  string key_vault_id = 1;
}

message VaultResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;

  VaultGcpOverride gcp_override = 3;
  VaultAzureOutputs azure_outputs = 4;
}
